# MusicStudio

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
sidecars/audio-fx/: main.py  requirements.txt
sidecars/song-gen/: main.py  requirements.txt
sidecars/stem-sep/: main.py  requirements.txt
sidecars/video-ai/: main.py  requirements.txt
sidecars/voice/: main.py  requirements.txt
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  media_tools.rs  model_manager.rs  process_manager.rs
src/lib/audio/: engine.ts
src/lib/components/: Captions.svelte  Diagnostics.svelte  EffectsRack.svelte  MasterPanel.svelte  PianoRoll.svelte  PlaceholderPanel.svelte  ScreenRecorder.svelte  Sidebar.svelte  StatusBar.svelte  StemSeparator.svelte  Timeline.svelte  Transcribe.svelte  Transport.svelte  VideoPreview.svelte  Voice.svelte
src/lib/stores/: aiTaskStore.ts  midiStore.ts  projectStore.ts  sidecarStore.ts  transportStore.ts  uiStore.ts
src/routes/: +error.svelte  +layout.ts  +page.svelte  +page.svelte.bak
